hell begins. Port all blocks