@@ -3,9 +3,11 @@ package quek.undergarden.block;
 import net.minecraft.core.BlockPos;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.InteractionResult;
+import net.minecraft.world.attribute.BedRule;
+import net.minecraft.world.attribute.EnvironmentAttributes;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.entity.npc.Villager;
+import net.minecraft.world.entity.npc.villager.Villager;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.DyeColor;
 import net.minecraft.world.level.BlockGetter;
@@ -17,9 +19,10 @@ import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.block.state.properties.BedPart;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.BlockHitResult;
+import net.minecraft.world.phys.Vec3;
 import net.minecraft.world.phys.shapes.CollisionContext;
 import net.minecraft.world.phys.shapes.VoxelShape;
-import quek.undergarden.registry.UGBlockEntities;
+import quek.undergarden.block.entity.DepthrockBedBlockEntity;
 import quek.undergarden.registry.UGDimensions;
 
 import java.util.List;
@@ -30,7 +33,7 @@ public class DepthrockBedBlock extends BedBlock {
 
 	public DepthrockBedBlock(Properties properties) {
 		super(DyeColor.GREEN, properties);
-		this.registerDefaultState(this.stateDefinition.any().setValue(PART, BedPart.FOOT).setValue(OCCUPIED, Boolean.FALSE));
+		this.registerDefaultState(this.getStateDefinition().any().setValue(PART, BedPart.FOOT).setValue(OCCUPIED, Boolean.FALSE));
 	}
 
 	@Override
@@ -41,7 +44,7 @@ public class DepthrockBedBlock extends BedBlock {
 	@Override
 	protected InteractionResult useWithoutItem(BlockState state, Level level, BlockPos pos, Player player, BlockHitResult result) {
 		if (level.isClientSide()) {
-			return InteractionResult.CONSUME;
+			return InteractionResult.SUCCESS_SERVER;
 		} else {
 			if (state.getValue(PART) != BedPart.HEAD) {
 				pos = pos.relative(state.getValue(FACING));
@@ -51,29 +54,31 @@ public class DepthrockBedBlock extends BedBlock {
 				}
 			}
 
-			if (!canSetSpawn(level)) {
+			BedRule bedRule = level.environmentAttributes().getValue(EnvironmentAttributes.BED_RULE, pos);
+			if (level.dimension() != UGDimensions.UNDERGARDEN_LEVEL && bedRule.explodes()) {
+				bedRule.errorMessage().ifPresent(player::sendOverlayMessage);
 				level.removeBlock(pos, false);
-				BlockPos blockpos = pos.relative(state.getValue(FACING).getOpposite());
-				if (level.getBlockState(blockpos).is(this)) {
-					level.removeBlock(blockpos, false);
+				BlockPos blockPos = pos.relative(state.getValue(FACING).getOpposite());
+				if (level.getBlockState(blockPos).is(this)) {
+					level.removeBlock(blockPos, false);
 				}
 
-				level.explode(null, level.damageSources().badRespawnPointExplosion(pos.getCenter()), null, (double) pos.getX() + 0.5D, (double) pos.getY() + 0.5D, (double) pos.getZ() + 0.5D, 5.0F, true, Level.ExplosionInteraction.BLOCK);
-				return InteractionResult.SUCCESS;
+				Vec3 boomPos = pos.getCenter();
+				level.explode(null, level.damageSources().badRespawnPointExplosion(boomPos), null, boomPos, 5.0F, true, Level.ExplosionInteraction.BLOCK);
+				return InteractionResult.SUCCESS_SERVER;
 			} else if (state.getValue(OCCUPIED)) {
 				if (!this.kickVillagerOutOfBed(level, pos)) {
-				player.displayClientMessage(Component.translatable("block.minecraft.bed.occupied"), true);
+					player.sendOverlayMessage(Component.translatable("block.minecraft.bed.occupied"));
 				}
 
-				return InteractionResult.SUCCESS;
+				return InteractionResult.SUCCESS_SERVER;
 			} else {
-				player.startSleepInBed(pos).ifLeft((sleepResult) -> {
-					if (sleepResult != null && sleepResult.getMessage() != null) {
-						player.displayClientMessage(sleepResult.getMessage(), true);
+				player.startSleepInBed(pos).ifLeft(problem -> {
+					if (problem.message() != null) {
+						player.sendOverlayMessage(problem.message());
 					}
-
 				});
-				return InteractionResult.SUCCESS;
+				return InteractionResult.SUCCESS_SERVER;
 			}
 		}
 	}
@@ -83,28 +88,24 @@ public class DepthrockBedBlock extends BedBlock {
 		if (list.isEmpty()) {
 			return false;
 		} else {
-			list.get(0).stopSleeping();
+			list.getFirst().stopSleeping();
 			return true;
 		}
 	}
 
-	public static boolean canSetSpawn(Level level) {
-		return level.dimension() == UGDimensions.UNDERGARDEN_LEVEL || level.dimensionType().bedWorks();
-	}
-
 	@Override
-	public void fallOn(Level level, BlockState state, BlockPos pos, Entity entity, float distance) {
-		entity.causeFallDamage(distance, 1.25F, entity.damageSources().fall());
+	public void fallOn(Level level, BlockState state, BlockPos pos, Entity entity, double fallDistance) {
+		entity.causeFallDamage(fallDistance, 1.25F, entity.damageSources().fall());
 	}
 
 	//stops bouncing
 	@Override
-	public void updateEntityAfterFallOn(BlockGetter getter, Entity entity) {
+	public void updateEntityMovementAfterFallOn(BlockGetter level, Entity entity) {
 		entity.setDeltaMovement(entity.getDeltaMovement().multiply(1.0D, 0.0D, 1.0D));
 	}
 
 	@Override
 	public BlockEntity newBlockEntity(BlockPos pos, BlockState state) {
-		return UGBlockEntities.DEPTHROCK_BED.get().create(pos, state);
+		return new DepthrockBedBlockEntity(pos, state);
 	}
 }
